// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mongodb - resets password successfully 1`] = `
Object {
  "message": "Password reset successful.",
}
`;

exports[`mongodb - throws 422 error when reset password token does not exist on DB 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`mongodb - throws 422 error when reset password token is expired 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`mongodb - throws error when token is valid but user does not exist on the DB 1`] = `
Object {
  "message": "User does not exist anymore.",
}
`;

exports[`mysql - resets password successfully 1`] = `
Object {
  "message": "Password reset successful.",
}
`;

exports[`mysql - throws 422 error when reset password token does not exist on DB 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`mysql - throws 422 error when reset password token is expired 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`mysql - throws error when token is valid but user does not exist on the DB 1`] = `
Object {
  "message": "User does not exist anymore.",
}
`;

exports[`pg - resets password successfully 1`] = `
Object {
  "message": "Password reset successful.",
}
`;

exports[`pg - throws 422 error when reset password token does not exist on DB 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`pg - throws 422 error when reset password token is expired 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`pg - throws error when token is valid but user does not exist on the DB 1`] = `
Object {
  "message": "User does not exist anymore.",
}
`;

exports[`sqlite - resets password successfully 1`] = `
Object {
  "message": "Password reset successful.",
}
`;

exports[`sqlite - throws 422 error when reset password token does not exist on DB 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`sqlite - throws 422 error when reset password token is expired 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`sqlite - throws error when token is valid but user does not exist on the DB 1`] = `
Object {
  "message": "User does not exist anymore.",
}
`;

exports[`sqlite3 - resets password successfully 1`] = `
Object {
  "message": "Password reset successful.",
}
`;

exports[`sqlite3 - throws 422 error when reset password token does not exist on DB 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`sqlite3 - throws 422 error when reset password token is expired 1`] = `
Array [
  Object {
    "field": "token",
    "message": "Invalid reset token.",
  },
]
`;

exports[`sqlite3 - throws error when token is valid but user does not exist on the DB 1`] = `
Object {
  "message": "User does not exist anymore.",
}
`;
